Responsive: Fixed modal size on smaller screens

--- a/style.css
+++ b/style.css
@@ -318,6 +318,9 @@ nav {
   .footer-container {
     height: auto;
   }
+  .modalContainer .modal-content {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -354,5 +357,9 @@ nav {
 
   .last-space {
     display: none;
+  }
+
+  .modalContainer .modal-content {
+    width: 80%;
   }
 }
